# nervland_adventures

./: .gitignore  LICENSE  README.md
experiments/001_gpu_reduction/shaders/: reduc0.wgsl  reduc1.wgsl  reduc3.wgsl  reduc4.wgsl  reduc5.wgsl  reduc6.wgsl
experiments/001_wgpu_reduction/: reduction_spec.cpp
experiments/001_wgpu_reduction/shaders/: reduc7.wgsl
experiments/002_wgpu_prefix_sum/: single_prefix_sum_spec.cpp
experiments/002_wgpu_prefix_sum/shaders/: prefixsum0_nvidia.wgsl  prefixsum1_hillissteele.wgsl  prefixsum1b_hillissteele.wgsl  prefixsum1c_hillissteele.wgsl  prefixsum1d_hillissteele.wgsl  prefixsum1e_hillissteele.wgsl  prefixsum2_custom.wgsl  prefixsum2b_custom.wgsl  prefixsum2c_custom.wgsl  prefixsum3_sklansky.wgsl  prefixsum3b_sklansky.wgsl  prefixsum3c_sklansky.wgsl  prefixsum4_brentkung.wgsl  prefixsum5_reducethenscan.wgsl
experiments/002_wgpu_prefix_sum/shaders/base/: prefixsum.wgsl
experiments/003_wgpu_native_wasm_app/test_sdl_minimal/: CMakeLists.txt  main.cpp
experiments/003_wgpu_native_wasm_app/test_sdl_wasm/: CMakeLists.txt  main.cpp
experiments/003_wgpu_native_wasm_app/test_sdl_webgpu/: CMakeLists.txt  main.cpp
experiments/003_wgpu_native_wasm_app/test_webgpu_wasm/: CMakeLists.txt  main.cpp
experiments/004_ffmpeg_video_playback/: FFMPEGVideoDecoder.h  VideoPlayer.cpp  VideoPlayer.h
experiments/005_procedural_voronoi/: voronoi_v0.wgsl  voronoi_v2.wgsl  voronoi_v4.wgsl  voronoi_v5.wgsl
experiments/008_ffmpeg_video_playback/: FFMPEGVideoDecoder.cpp  VideoDecoder.cpp  VideoDecoder.h  nv12_to_rgba.hlsl
experiments/009_procedural_voronoi/: voronoi_v1.wgsl  voronoi_v3.wgsl
